# cs244-project2

./: .gitignore  README.md
datagrump/: Makefile.am  controller.cc  controller.hh  debug_printf.hh  default_controller.cc  default_controller.hh  excercised_raw_data.txt  exercise_controllers.hh  exercisea.cc  exercisea.hh  exerciseb.cc  exerciseb.hh  exercisec.cc  exercisec.hh  exercised.cc  exercised.hh  exercised_jm.cc  exercised_jm.hh  exercised_jm2.cc  exercised_jm2.hh  exercised_lh.cc  exercised_lh.hh  run-contest  runcontest.sh  sender.cc
report/: compile_report.sh  exercised-plot.ods  report.tex
